--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
-    "@barba/core": "^2.9.7",
     "fibers": "^5.0.0",
     "gsap": "^3.6.1",
     "imagesloaded": "^4.1.4",
+    "locomotive-scroll": "^4.1.1",
     "sass": "^1.34.0",
-    "sass-loader": "10",
-    "smooth-scrollbar": "^8.6.2"
+    "sass-loader": "10"
   }
 }
