--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "locomotive-scroll": "^4.1.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "nuxt-i18n": "^6.27.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
